--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
       <p>
         In this tutorial, you will learn how to make a chord graph.
         This example uses <a href="https://d3js.org/d3.v3.min.js">D3.js v3</a> and <a href="http://getskeleton.com/">Skeleton</a> boilerplate.
+        <br>
+        The GitHub repository for this tutorial is <a href="https://github.com/dpapanik/making_a_chord_graph_with_d3v3">here</a>.
       </p>
     </div>
   </div>
