--- a/chord_example_step_04.html
+++ b/chord_example_step_04.html
@@ -203,11 +203,113 @@
 			.attr("d", function(d) { return arc(d)});
 
 
+			// Chords
+			// STEP 1: Bind data to chords
+			var chords = svgGroup
+			.selectAll(".chord")
+				.data(chord_data);
+
+			// Step 2: Append any new chords if needed
+			chords
+				.enter()
+				.append("path")
+				.attr("class", "chord");
+
+			// Step 3: Remove any excessive chorsa if needed
+			chords
+				.exit()
+				.remove();
+
+			// Step 4: Modify the chords based on their bound data
+			chords
+				.attr("id", function(d, i) { return "chord_" + i; })
+				.style("fill", d3.rgb(180,180,180))
+				.style("stroke", d3.rgb(180,180,180).darker(3))
+				.style("opacity", 0.5)
+				.attr("d", function(d) { return chord(d)} )
+
+
+			//TickGroups
+			// Step 1: Bind data to tick groups
+			var tickGroups = svgGroup
+			.selectAll(".tickGroups")
+			.data(arc_data);
+
+			// Step 2: Append any new tick groups if needed
+			tickGroups
+			.enter()
+			.append("g")
+			.attr("class", "tickGroups");
+
+			// Step 3: Remove any excessive tick groups if needed
+			tickGroups
+			.exit()
+			.remove();
+
+
+			//Ticks
+			// Step 1: Bind data
+			var ticks = tickGroups
+			.selectAll("g")
+			.data(groupTicks);
+
+			// Step 2: Append any new elements if needed
+			// SubStep 2.1: Append any new ticks if needed
+			var tick = ticks
+			.enter()
+			.append("g");
+
+			// SubStep 2.2: Within each tick append any new lines if needed
+			tick
+			.append("line")
+			.attr("x1", 1)
+			.attr("y1", 0)
+			.attr("x2", 10)
+			.attr("y2", 0)
+			.style("stroke", "#000");
+
+			// SubStep 2.3: Within each tick append any new text if needed
+			tick
+			.append("text")
+			.attr("x", 15)
+			.attr("font-size", "11px")
+			.attr("dy", ".35em");
+
+
+			// Step 3: Remove any excessive elements if needed
+			ticks
+			.exit()
+			.remove();
+
+
+			// Step 4: Modify elements based on their bound data
+			ticks
+			.attr("transform", function(d) {
+				return "rotate(" + (d.angle * 180 / Math.PI - 90) + ")"
+				+ "translate(" + (outerRadius + 10) + ",0)";
+			});
+
+			ticks
+			.selectAll("text")
+			.attr("transform", function(d) { return d.angle > Math.PI ? "rotate(180)translate(-30)" : null; })
+			.style("text-anchor", function(d) { return d.angle > Math.PI ? "end" : null; })
+			.text(function(d) { return d.label; });
+
+
 		}
 
 
 
-
+		// Returns an array of tick angles and labels, given a group.
+		function groupTicks(d,i) {
+			var k = (d.endAngle - d.startAngle) / (d.value);
+			return d3.range(0, d.value,1).map(function(v, i) {
+				return {
+					angle: v * k + d.startAngle,
+					label: i % 5 ? null : v  + "%"
+				};
+			});
+		}
 		function redraw(){
 			tripData = createTripData(nTrips, nStations);
 			stationData = createStationData(nStations);
